[INFER] Make sure the operands in bitops are not copies of one another, bug 647440.